# nullcore-loader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
extlibs/: CMakeLists.txt
source/: main.cpp
source/gui/: CMakeLists.txt  StatusWindow.cpp  StatusWindow.hpp
source/images/: ncc_ico.h  ncc_loader_logo.h
